--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,182 @@
+#findus2{
+    background-image:url("img/lightorange");
+    background-size: 1000px 1000px;
+    max-width:100%;
+   
+       
+    
+}
+#locationsparagraph{
+    position:absolute;
+    left:870px;
+}
+#locationsparagraph2
+{
+    position:absolute;
+    right:550px;
+  
+}
+#locpar3
+{
+    position:relative;
+    right:330px;
+}
+#locpar4
+{
+    position:relative;
+    right:370px;
+}
+#footerpar4
+{
+    position:relative;
+    right:420px;
+}
+#findus3
+{
+    background-color:orange;
+    
+    background-image:radial-gradient(orange);
+    background-size:contain;
+}
+
+#icons{
+    position:absolute;
+    top:100px;
+}
+#followusheader{
+    position:absolute;
+    left:43.7px;
+    top:25px;
+}
+@media(max-width:767px) /* sm screen and xs*/
+{
+    #followusheader{
+        position:absolute;
+        left:17px;
+    }
+    #followusvl{
+      border-right: 6px solid green;
+      position:relative;
+      left: 1.7px;
+      bottom:100px;
+      height: 170px;
+      align-self:left;
+  
+    }
+    #vl3{
+        
+    }
+}
+@media( max-width:771px) /* md screen and lg*/
+{
+    #followusheader{
+        position:relative;
+        left:25px;
+    }
+
+    #followusvl2{
+        border-right: 6px solid green;
+        position:absolute;
+        left: 200.7px;
+        bottom:10px;
+        height: 200px;
+        align-self:left;
+    
+      }
+}
+
+#vllg{
+    border-right: 6px solid green;
+    position:absolute;
+    left: 200.7px;
+    bottom:10px;
+    height: 200px;
+    align-self:left;
+
+  }
+
+#followusvl{
+    border-right: 6px solid green;
+    position:relative;
+    left:0px;
+    bottom:10px;
+    height: 200px;
+    align-self:left;
+
+  }
+  #followusvl2{
+    border-right: 6px solid green;
+    position:relative;
+    left: 427.7px;
+    bottom:10px;
+    height: 200px;
+    align-self:left;
+
+  }
+
+
+
+
+
+
+
+
+
+
+
 .vertical-center {
     height:100%;
     width:100%;
   
     text-align: center;  /* align the inline(-block) elements horizontally */
     font: 0/0 a;         /* remove the gap between inline(-block) elements */
+  }
+  .middleimgs
+  {
+    width: 100% \9;
+
+  }
+  #findusheader{
+      position:absolute;
+      left:217.7px;
+  }
+  @media(max-width:767px)
+  {
+      #findusheader{
+          position:absolute;
+          align-self:left;
+      }
+      
+  }
+  @media( max-width:1290px)
+  {
+      #findusheader{
+          position:relative;
+          left:85px;
+      }
+
+  }
+
+  
+
+
+
+  #findusvl{
+    border-right: 6px solid green;
+    position:relative;
+    left: -257.7px;
+    bottom:100px;
+    height: 170px;
+    align-self:left;
+
+  }
+  #findus
+  {
+    max-width:100%; /*added max-width css Prop to */
+   background-color:#ff834a !important;
+   height:257px;
+
+   
   }
 
   #cardmiddle{
@@ -209,34 +382,39 @@ padding-left:30px;
     border-bottom:0px; /* used id selector in css to remove border from this row content*/
 }
 
+#footer2{
+    background-color: #ffd8b0;
+    margin: 0px auto;
+    padding: 20px 0px 20px 0px;
+    background-size: 1000%;
+    height:400.7px;
+    position:relative;
+
+}
 .footer {
     background-color: #ffd8b0;
     margin: 0px auto;
     padding: 20px 0px 20px 0px;
     background-size: 1000%;
-    height:287.7px;
+    height:400.7px;
     position:relative;
    
 }
-#vl2{
+
+
+
+#vl3
+{
     border-right: 6px solid green;
     position:relative;
-    left: 227.7px;
-    bottom:100px;
-    height: 100px;
+    left: 327.7px;
+    bottom:27px;
+    height: 170px;
     align-self:center;
+
 }
-/* small devices, smartphones and up */
-@media (min-width: 576px){ 
-.vl {
-    border-right: 6px solid green;
-    position:relative;
-    left: 370px;
-    bottom:100px;
-    height: 100px;
-    align-self:center;
-  }
-}
+/* small devices, smartphones, and up is styled in the below vl class */
+
 
 
 .footer-contactus{
@@ -252,8 +430,8 @@ padding-left:30px;
 
 .jumbotron{
     padding: 10px 10px 10px 10px;
-    margin: 0px auto;
-    background-color:#6c3b88  !important; 
+  
+    background-color:#ff834a  !important; 
     color: floralwhite !important;
 }
 
