--- a/css/styles.css
+++ b/css/styles.css
@@ -99,6 +99,8 @@
       }
 }
 
+
+
 #vllg{
     border-right: 6px solid green;
     position:absolute;
@@ -127,6 +129,105 @@
     align-self:left;
 
   }
+  #logoimg0
+  {
+      position:relative;
+      left:757px;
+  }
+  #logoimg1
+  {
+      position:relative;
+      left:570px;
+  }
+  /*@media(min-width:768px max-width:991px)*/
+  
+  #logoimg2
+  {
+      position:relative;
+      left:447px;
+
+  }
+  @media(min-width:765px)
+  {
+      #logoimg4
+      {
+          display:none;
+      }
+  }
+  @media(min-width:765px)
+  {
+      #logoimg4
+      {
+          display:none;
+          position:relative;
+          right:307px;
+      }
+  }
+
+  @media(max-width:503px)
+  {
+      #logoimg7
+      {
+          display:none;
+      }
+      #logoimg2
+      {
+          display:none;
+      }
+      
+  }
+  #logoimg7
+  {
+      position:relative;
+      left:257px;
+  }
+
+  @media(min-width:503px) and (max-width:576px)
+  {
+      #logoimg8
+      {
+          display:none;
+      }
+      #logoimg2
+      {
+          position:relative;
+          left:237px;
+      }
+  }
+
+
+
+  @media(min-width:0px) and (max-width:503px)
+  {
+  #logoimg8
+  {
+    position:relative;
+    left:207px;
+
+    
+  }
+  #logoimg2
+  {
+      display:none;
+  }
+}
+
+
+  #logoimg4
+  {
+      position:relative;
+      left:287px;
+  }
+  @media(max-width:764px)
+  {
+      #logoimg3
+      {
+          position:relative;
+          left:207px;
+      }
+
+  }
+
 
 
 
@@ -145,9 +246,10 @@
     text-align: center;  /* align the inline(-block) elements horizontally */
     font: 0/0 a;         /* remove the gap between inline(-block) elements */
   }
-  .middleimgs
+  #middleimgs /* this is how you add style using id HTML tag */
   {
-    width: 100% \9;
+    width:150px;
+    length:150px;
 
   }
   #findusheader{
