--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,14 @@
     position:relative;
     left:25.7px;
 }
+@media(max-width:770px)
+{
+    #productheader
+    {
+        position:relative;
+        left:-57px;
+    }
+}
 
 
 #findus2{
@@ -28,13 +36,21 @@
 #locationsparagraph2
 {
     position:absolute;
-    right:550px;
+    right:470px;
   
 }
 #locpar3
 {
     position:relative;
-    right:330px;
+    right:390px;
+}
+@media(max-width:992px) and (min-width:825px)
+{
+    #locpar3
+    {
+        position:relative;
+        right:300px;
+    }
 }
 #locpar4
 {
