--- a/css/styles.css
+++ b/css/styles.css
@@ -44,6 +44,11 @@
     position:relative;
     right:390px;
 }
+#guavabutton
+{
+    background-color: #ffffff;
+    border:none;
+}
 @media(max-width:992px) and (min-width:825px)
 {
     #locpar3
