--- a/css/styles.css
+++ b/css/styles.css
@@ -49,6 +49,13 @@
     background-color: #ffffff;
     border:none;
 }
+#guavabutton2
+{
+    background-color: #ffffff;
+    border:none;
+    
+    
+}
 @media(max-width:992px) and (min-width:825px)
 {
     #locpar3
@@ -269,6 +276,10 @@
   @media(min-width:503px) and (max-width:576px)
   {
       #logoimg8
+      {
+          display:none;
+      }
+      #logoimg9
       {
           display:none;
       }
