--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,5 @@
 
+/* 992 px for top logo position*/
 @media(min-width:1601px)
 {
     #xshidden{
@@ -762,4 +763,30 @@ body{
     border-bottom:0px;
     border-right:0px;
     border-top: 0px;
+}
+@media(min-width:1630px)
+{
+    #logoimg0
+    {
+        position:relative;
+        left:670px;
+
+    }
+}
+@media(min-width:1300px) and (max-width:1565px)
+{
+    #logoimg0
+    {
+        position:relative;
+        left:487px;
+
+    }
+}
+@media(min-width:1200px) and (max-width:1299px)
+{
+    #logoimg0
+    {
+        position:relative;
+        left:427px;
+    }
 }
