--- a/css/styles.css
+++ b/css/styles.css
@@ -441,6 +441,43 @@
           position:relative;
           top:27.77px;
       }
+      
+      
+  }
+
+  @media(min-width:481px) and (max-width:575px)
+  {
+    #locpar1
+    {
+        display:none;
+    }
+    #locationsparagraph27
+    {
+        display:none;
+    }
+    #locationsparagraph2
+    {
+        display:none;
+    }
+    #locpar3
+    {
+        display:none;
+    }
+    #locpar4
+    {
+        display:none;
+    }
+    #locpar6
+    {
+        position:relative;
+        top:29.7px;
+    }
+    #footerpar4
+    {
+        position:relative;
+        top:29.77px;
+    }
+
   }
 
 
@@ -560,17 +597,7 @@ padding-right:50px;
 
 
 @media(max-width:480 px){ /*used to add padding,margin or other necessary props to style div classes */
-.jumbotron{
-    padding-left:50px
-    padding-right 50px
-    padding-top 50px
-    padding-bottom 50px;
-    max-width:100%;
 
-    
-    
-
-}
 
 #buffetbadge{
     text-align:center;
@@ -764,7 +791,43 @@ padding-left:30px;
     padding: 10px 10px 10px 10px;
   
     background-color:#ff834a  !important; 
-    color: floralwhite !important;
+    color: rgb(14, 13, 13) !important;
+    max-width:1000% !important;
+}
+@media(min-width:307px) and (max-width:475px)
+{
+
+    #locpar1
+    {
+        display:none;
+    }
+    #locationsparagraph2
+    {
+        display:none;
+    }
+    #locpar3
+    {
+        display:none;
+    }
+    .jumbotron
+    {
+        width:auto;
+    }
+    #locpar6
+    {
+        position:relative;
+        right:677px;
+    }
+    #footerpar4
+    {
+        position:relative;
+        right:677px;
+    }
+
+}
+#jumbot
+{
+    max-width:100%;
 }
 
 .address{
